metadata/force-app/main/default/objects/Contracted_Limit__c/Contracted_Limit__c.object-meta.xml
<CustomObject>
    <label>Contracted Limit</label>
    <nameField>
        <displayFormat>CNTLMT-{0000000}</displayFormat>
        <label>Contracted Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracted Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>