metadata/force-app/main/default/objects/Contracted_Limit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracted Limits</relationshipLabel>
    <relationshipName>Contracted_Limits</relationshipName>
    <type>Lookup</type>
</CustomField>