metadata/force-app/main/default/objects/Contracted_Limit__c/fields/Latest_Amendment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Amendment_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Amendment Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracted Limits (Latest Amendment Opportunity)</relationshipLabel>
    <relationshipName>Contracted_Limits1</relationshipName>
    <type>Lookup</type>
</CustomField>