metadata/force-app/main/default/objects/Contracted_Limit__c/fields/Latest_Amendment_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Latest_Amendment_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Amendment Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Contracted Limits (Latest Amendment Opportunity Product)</relationshipLabel>
    <relationshipName>Contracted_Limits1</relationshipName>
    <type>Lookup</type>
</CustomField>