metadata/force-app/main/default/objects/Contracted_Limit__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limit</label>
    <referenceTo>Limit__c</referenceTo>
    <relationshipLabel>Contracted Limits</relationshipLabel>
    <relationshipName>Contracted_Limits</relationshipName>
    <type>Lookup</type>
</CustomField>