metadata/force-app/main/default/objects/Contracted_Limit__c/fields/Month_of_Term__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Term__c</fullName>
    <label>Month of Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>