metadata/force-app/main/default/objects/Contracted_Limit__c/fields/Original_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Contracted Limits</relationshipLabel>
    <relationshipName>Contracted_Limits</relationshipName>
    <type>Lookup</type>
</CustomField>