metadata/force-app/main/default/objects/Contracted_Limit__c/fields/Term_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Contract__c</fullName>
    <label>Term of Contract</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>